[gd_scene format=3 uid="uid://vsue14dc3j1d"]

[ext_resource type="Script" uid="uid://bvs3xi0h4xwl7" path="res://scripts/lobby_scripts/player_icon_big.gd" id="1_qfbvr"]
[ext_resource type="Texture2D" uid="uid://dg4j7hrm4ylg7" path="res://assets/icons/ia.svg" id="2_nkkxk"]
[ext_resource type="Texture2D" uid="uid://dyr05bl1052fj" path="res://assets/icons/loading_circle.svg" id="2_tmn0o"]
[ext_resource type="Theme" uid="uid://c1nforevd52yq" path="res://styles/themes/main_theme.tres" id="3_qfbvr"]
[ext_resource type="FontFile" uid="uid://cel767gfqwf3q" path="res://assets/fonts/LTSuperior/LTSuperior-ExtraBoldItalic.ttf" id="4_f7vb1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qfbvr"]
bg_color = Color(1, 1, 1, 1)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="Gradient" id="Gradient_overlay"]
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 0.9)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_overlay"]
gradient = SubResource("Gradient_overlay")
fill_from = Vector2(0.5, 0)
fill_to = Vector2(0.5, 1)

[node name="PlayerIconBig" type="Panel" unique_id=515675446]
clip_children = 1
custom_minimum_size = Vector2(400, 400)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1520.0
offset_bottom = -680.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_qfbvr")
script = ExtResource("1_qfbvr")

[node name="bg_waiting" type="ColorRect" parent="." unique_id=1759949050]
modulate = Color(0.90234375, 0.90234375, 0.90234375, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="circle_waiting" type="TextureRect" parent="." unique_id=1500652769]
custom_minimum_size = Vector2(120, 120)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -100.0
offset_right = 60.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(60, 60)
texture = ExtResource("2_tmn0o")
expand_mode = 4
stretch_mode = 4

[node name="waiting_label" type="Label" parent="." unique_id=1018219203]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = 40.0
offset_right = 48.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_qfbvr")
theme_override_font_sizes/font_size = 30
text = "Esperando..."

[node name="PlayerIcon" type="TextureRect" parent="." unique_id=126430344]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(200, 200)
mouse_filter = 2
expand_mode = 1
stretch_mode = 6

[node name="Gradient" type="TextureRect" parent="." unique_id=1436914453]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("GradientTexture2D_overlay")

[node name="TopRightIcon" type="TextureRect" parent="." unique_id=2146756868]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -84.0
offset_top = 24.0
offset_right = -20.0
offset_bottom = 88.0
grow_horizontal = 0
pivot_offset = Vector2(32, 32)
mouse_filter = 2
texture = ExtResource("2_nkkxk")
expand_mode = 1
stretch_mode = 5

[node name="AddBotButton" type="Button" parent="." unique_id=1235943177]
custom_minimum_size = Vector2(250, 0)
layout_mode = 0
offset_left = 81.0
offset_top = 302.0
offset_right = 319.0
offset_bottom = 352.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_qfbvr")
theme_override_font_sizes/font_size = 45
text = "AÃ±adir Bot"

[node name="RemoveBotButton" type="Button" parent="." unique_id=1079827443]
custom_minimum_size = Vector2(250, 0)
layout_mode = 0
offset_left = 81.0
offset_top = 302.0
offset_right = 319.0
offset_bottom = 352.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_qfbvr")
theme_override_font_sizes/font_size = 45
text = "Eliminar Bot"

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1672859480]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -120.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
alignment = 2

[node name="Name" type="Label" parent="VBoxContainer" unique_id=1368211581]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_f7vb1")
theme_override_font_sizes/font_size = 40
text = "PLAYER_NAME"
horizontal_alignment = 1

[connection signal="pressed" from="AddBotButton" to="." method="_on_add_bot_button_pressed"]
[connection signal="pressed" from="RemoveBotButton" to="." method="_on_remove_bot_button_pressed"]
